# blink

./: .gitignore  Dockerfile  README.md  compose-dev.env  compose-prod.env  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  run-tests.yml
data/: sample_trades.csv
env/: template-dev.env  template-prod.env
src/main/: config.py  features.py  ingestor.py  logging_utils.py  redis_utils.py  sampler.py  service.py  storage.py  train.py
src/main/db/: schema.sql
src/tests/: conftest.py  test_features.py  test_logging_utils.py
web/templates/: demo.html
