[project]
name = "blink"
version = "0.1.0"
description = "Realtime BTC-USD anomaly detector demo"
requires-python = ">=3.11"
readme = "README.md"


# Runtime dependencies
dependencies = [
    "websockets==12.0",
    "psycopg2-binary==2.9.9",
    "SQLAlchemy==2.0.34",
    "pandas==2.2.2",
    "redis==5.0.8",
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "mlflow==2.16.0",
    "scikit-learn==1.5.2",
    "prometheus-client==0.20.0",
    "plotly==5.23.0",
    "jinja2==3.1.4",
    "python-dotenv==1.0.1",
    "pytest==8.3.3",
]


[tool.uv]
# Keep lockfile in repo for reproducibility
cache-keys = ["pyproject.toml", "uv.lock"]


[tool.uv.pip]
# Speed up and make installs deterministic
index-url = "https://pypi.org/simple"
